--- a/conocimientos.html
+++ b/conocimientos.html
@@ -6,18 +6,21 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-<a href="index.html">Inicio</a> ||
-<a href="datospersonales.html">Datos Personales</a> ||
-<a href="datosacademicos.html">Datos Académicos</a>
-
-<h1>Conocimientos</h1>
-<p>Conocimientos pertenecientes a la rama de <strong>Electricidad y Electrónica</strong></p>
-<p><strong>Ofimática:</strong> MS Word, MS Excel MS PowerPoint, Prezi</p>
-<p><strong>Programación:</strong> HTML5, CSS 3, XML, SQL, Arduino</p>
-<p><strong>Programas:</strong> JetBrains WebStorm 2017, JetBrains DataGrip 2017,Siemens SIMATIC, Siemens LOGO!,
-    Arduino IDE, Adobe Photoshop CC, Adobe Lightroom CC Classic, VEGAS Pro 15</p>
-<h1>Idiomas:</h1>
-<p><strong>Lengua materna:</strong> Castellano</p>
-<p><strong>Inglés:</strong> Educación Secundaria</p>
+<nav>
+    <a href="index.html">Inicio</a> |
+    <a href="datospersonales.html">Datos Personales</a> |
+    <a href="datosacademicos.html">Datos Académicos</a>
+</nav>
+<div id="conocimientos">
+        <h1>Conocimientos</h1>
+        <p>Conocimientos pertenecientes a la rama de <strong>Electricidad y Electrónica</strong></p>
+        <p><strong>Ofimática:</strong> MS Word, MS Excel MS PowerPoint, Prezi</p>
+        <p><strong>Programación:</strong> HTML5 - CSS3 - XML - SQL - Arduino</p>
+        <p><strong>Programas:</strong> JetBrains WebStorm 2017, DataGrip 2017 | Siemens SIMATIC,LOGO!
+                                        | Arduino IDE | Adobe Photoshop CC, Lightroom CC Classic </p>
+        <h1>Idiomas:</h1>
+        <p><strong>Lengua materna:</strong> Castellano</p>
+        <p><strong>Inglés:</strong> Educación Secundaria</p>
+</div>
 </body>
 </html>
