--- a/datosacademicos.html
+++ b/datosacademicos.html
@@ -6,25 +6,28 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-<a href="index.html">Inicio</a> ||
-<a href="datospersonales.html">Datos Personales</a> ||
-<a href="conocimientos.html">Conocimientos</a>
-
+<nav>
+    <a href="index.html">Inicio</a> |
+    <a href="datospersonales.html">Datos Personales</a> |
+    <a href="conocimientos.html">Conocimientos</a>
+</nav>
 
 <h1>Datos Académicos</h1>
-<table border="1">
-    <tr>
-        <td><strong>Educación Secundaria Obligatoria</strong></td>
-        <td>I.E.S Virgen de la Calle, Palencia 2010 – 2015</td>
-    </tr>
-    <tr>
-        <td><strong>CFGM Instalaciones de Telecomunicaciones</strong></td>
-        <td>Centro Don Bosco, Villamuriel De Cerrato 2015 – 2017</td>
-    </tr>
-    <tr>
-        <td><strong>CFGS Administración de Sistemas Informáticos en Red</strong></td>
-        <td>Centro Don Bosco, Villamuriel De Cerrato 2017 - Cursando</td>
-    </tr>
+<div id="estudios">
+    <table>
+        <tr>
+            <td><strong>Educación Secundaria Obligatoria</strong></td>
+            <td>I.E.S Virgen de la Calle, Palencia 2010 – 2015</td>
+        </tr>
+        <tr>
+            <td><strong>CFGM Instalaciones de Telecomunicaciones</strong></td>
+            <td>Centro Don Bosco, Villamuriel De Cerrato 2015 – 2017</td>
+        </tr>
+        <tr>
+            <td><strong>CFGS Administración de Sistemas Informáticos en Red</strong></td>
+            <td>Centro Don Bosco, Villamuriel De Cerrato 2017 - Cursando</td>
+        </tr>
+</div>
 </table>
 
 </body>
