--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
     <link rel="stylesheet" href="estilos.css">
 </head>
 <body>
-<div>
+<div id="capa">
 
 <h1>Currículum Vitae</h1>
-<h2>José María González</h2>
-
-<h1><a href="datospersonales.html">Datos Personales</a></h1>
-
-<h1><a href="datosacademicos.html">Datos Académicos</a></h1>
-
-<h1><a href="conocimientos.html">Conocimientos</a></h1>
+<h2>José María González Conde</h2>
+    <p><a href="datospersonales.html">Datos Personales</a><br>
+        <a href="datosacademicos.html">Datos Académicos</a><br>
+        <a href="conocimientos.html">Conocimientos</a></p>
 </div>
 
 </body>
