--- a/datosacademicos.html
+++ b/datosacademicos.html
@@ -11,20 +11,19 @@
     <a href="datospersonales.html">Datos Personales</a> |
     <a href="conocimientos.html">Conocimientos</a>
 </nav>
-
-<h1>Datos Académicos</h1>
 <div id="estudios">
+    <h1>Datos Académicos</h1>
     <table>
         <tr>
-            <td><strong>Educación Secundaria Obligatoria</strong></td>
+            <th>Educación Secundaria Obligatoria</th>
             <td>I.E.S Virgen de la Calle, Palencia 2010 – 2015</td>
         </tr>
         <tr>
-            <td><strong>CFGM Instalaciones de Telecomunicaciones</strong></td>
+            <th>CFGM Instalaciones de Telecomunicaciones</th>
             <td>Centro Don Bosco, Villamuriel De Cerrato 2015 – 2017</td>
         </tr>
         <tr>
-            <td><strong>CFGS Administración de Sistemas Informáticos en Red</strong></td>
+            <th>CFGS Administración de Sistemas Informáticos en Red</th>
             <td>Centro Don Bosco, Villamuriel De Cerrato 2017 - Cursando</td>
         </tr>
 </div>
