--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
 
 <h1>Currículum Vitae</h1>
 <h2>José María González Conde</h2>
-    <p><a href="datospersonales.html">Datos Personales</a><br>
-        <a href="datosacademicos.html">Datos Académicos</a><br>
-        <a href="conocimientos.html">Conocimientos</a></p>
+    <p><a href="paginas/datospersonales.html">Datos Personales</a><br>
+        <a href="paginas/datosacademicos.html">Datos Académicos</a><br>
+        <a href="paginas/conocimientos.html">Conocimientos</a></p>
+</div>
+<div id="contacto">
+    <a href="mailto:josegonsk8@gmail.com">Contacto</a>
 </div>
 
 </body>
