5º commit implementación experiencia y cambio de fondo

--- a/paginas/conocimientos.html
+++ b/paginas/conocimientos.html
@@ -10,6 +10,8 @@
     <a href="../index.html">Inicio</a> |
     <a href="datospersonales.html">Datos Personales</a> |
     <a href="datosacademicos.html">Datos Académicos</a> |
+    <a href="conocimientos.html">Conocimientos</a> |
+    <a href="experiencia.html">Experiencia</a> |
     <a href="mailto:josegonsk8@gmail.com">Contacto</a>
 </nav>
 <div id="conocimientos">
