--- a/paginas/datosacademicos.html
+++ b/paginas/datosacademicos.html
@@ -9,12 +9,14 @@
 <nav>
     <a href="../index.html">Inicio</a> |
     <a href="datospersonales.html">Datos Personales</a> |
+    <a href="datosacademicos.html">Datos Académicos</a> |
     <a href="conocimientos.html">Conocimientos</a> |
+    <a href="experiencia.html">Experiencia</a> |
     <a href="mailto:josegonsk8@gmail.com">Contacto</a>
 </nav>
 <div id="estudios">
     <h1>Datos Académicos</h1>
-    <table>
+    <table border="1">
         <tr>
             <th>Educación Secundaria Obligatoria</th>
             <td>I.E.S Virgen de la Calle, Palencia 2010 – 2015</td>
