--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 </head>
 <body>
 <div id="capa">
-
 <h1>Currículum Vitae</h1>
 <h2>José María González Conde</h2>
     <p><a href="paginas/datospersonales.html">Datos Personales</a><br>
         <a href="paginas/datosacademicos.html">Datos Académicos</a><br>
-        <a href="paginas/conocimientos.html">Conocimientos</a></p>
+        <a href="paginas/conocimientos.html">Conocimientos</a><br>
+        <a href="paginas/experiencia.html">Experiencia</a></p>
 </div>
 <div id="contacto">
     <a href="mailto:josegonsk8@gmail.com">Contacto</a>
