--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="paginas/experiencia.html">Experiencia</a></p>
 </div>
 <div id="contacto">
-    <a href="mailto:josegonsk8@gmail.com">Contacto</a>
+    <a href="paginas/contacto.html">Contacto</a>
 </div>
 
 </body>
