--- a/paginas/conocimientos.html
+++ b/paginas/conocimientos.html
@@ -10,9 +10,9 @@
     <a href="../index.html">Inicio</a> |
     <a href="datospersonales.html">Datos Personales</a> |
     <a href="datosacademicos.html">Datos Académicos</a> |
-    <a href="conocimientos.html">Conocimientos</a> |
+    <a href="conocimientos.html" class="activo">Conocimientos</a> |
     <a href="experiencia.html">Experiencia</a> |
-    <a href="mailto:josegonsk8@gmail.com">Contacto</a>
+    <a href="contacto.html">Contacto</a>
 </nav>
 <div id="conocimientos">
         <h1>Conocimientos</h1>
