--- a/paginas/datosacademicos.html
+++ b/paginas/datosacademicos.html
@@ -9,10 +9,10 @@
 <nav>
     <a href="../index.html">Inicio</a> |
     <a href="datospersonales.html">Datos Personales</a> |
-    <a href="datosacademicos.html">Datos Académicos</a> |
+    <a href="datosacademicos.html" class="activo">Datos Académicos</a> |
     <a href="conocimientos.html">Conocimientos</a> |
     <a href="experiencia.html">Experiencia</a> |
-    <a href="mailto:josegonsk8@gmail.com">Contacto</a>
+    <a href="contacto.html">Contacto</a>
 </nav>
 <div id="estudios">
     <h1>Datos Académicos</h1>
