--- a/paginas/experiencia.html
+++ b/paginas/experiencia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <title>Experiencia</title>
@@ -11,8 +11,8 @@
     <a href="datospersonales.html">Datos Personales</a> |
     <a href="datosacademicos.html">Datos Académicos</a> |
     <a href="conocimientos.html">Conocimientos</a> |
-    <a href="experiencia.html">Experiencia</a> |
-    <a href="mailto:josegonsk8@gmail.com">Contacto</a>
+    <a href="experiencia.html" class="activo">Experiencia</a> |
+    <a href="contacto.html">Contacto</a>
 </nav>
 <div id="exp">
     <h1>Experiencia</h1>
