--- a/paginas/datospersonales.html
+++ b/paginas/datospersonales.html
@@ -8,25 +8,32 @@
 <body>
 <nav>
     <a href="../index.html">Inicio</a> |
-    <a href="datospersonales.html">Datos Personales</a> |
+    <a href="datospersonales.html" class="activo">Datos Personales</a> |
     <a href="datosacademicos.html">Datos Académicos</a> |
     <a href="conocimientos.html">Conocimientos</a> |
     <a href="experiencia.html">Experiencia</a> |
-    <a href="mailto:josegonsk8@gmail.com">Contacto</a>
+    <a href="contacto.html">Contacto</a>
 </nav>
 <div id="datos">
     <h1>Datos Personales</h1>
     <table>
         <h2>José María González Conde</h2>
-        <div id="foto">
-            <p><img src="../imagenes/foto1.jpeg" alt="Jose" width="150" height="200"></p>
-        </div>
-        <p><strong>DNI:</strong> 71964718-H</p>
-        <p><strong>Nacionalidad:</strong> Española</p>
-        <p><strong>Fecha de nacimiento:</strong> 20/8/1997. Palencia. España</p>
-        <p><strong>Domicilio:</strong> C/ Tomillo Nº1 3ºA, 34003. Palencia. España</p>
-        <p><strong>Teléfono:</strong> 979 74 42 24 / +34 699 02 88 06</p>
-        <p><strong>Contacto:</strong> josegonsk8@gmail.com</p>
+        <tr>
+            <td>
+                <p><strong>DNI:</strong> 71964718-H</p>
+                <p><strong>Nacionalidad:</strong> Española</p>
+                <p><strong>Fecha de nacimiento:</strong> 20/8/1997. Palencia. España</p>
+                <p><strong>Domicilio:</strong> C/ Tomillo Nº1 3ºA, 34003. Palencia. España</p>
+                <p><strong>Teléfono:</strong> 979 74 42 24 / +34 699 02 88 06</p>
+                <p><strong>Contacto:</strong> josegonsk8@gmail.com</p>
+            </td>
+
+            <td class="foto">
+                    <p><img src="../imagenes/foto1.jpeg" alt="Jose" width="150" height="200"></p>
+            </td>
+        </tr>
+
+
     </table>
 </div>
 </body>
