--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -17,7 +17,7 @@
 <div id="form">
     <h1>Contacto</h1>
     <form action="#" method="post">
-        <table border="1">
+        <table>
             <tr>
                 <th>
                     <label for="mail">Email:</label><br>
